feat: implement comprehensive rate limiting with progressive penalties
- Add FastAPI Limiter with Redis backend for distributed rate limiting
- Implement FailedLoginTracker for progressive rate limiting based on failed attempts
- Create progressive_rate_limit dependency for intelligent blocking
- Refactor MFA authentication flow for better separation and code reuse
- Add _authenticate_user() and _create_token_response() helper functions
- Remove confusing mfa_token parameter from /token endpoint
- Apply progressive penalties: 3+ failures = blocked, escalating with more failures
- Update FastAPI to use modern lifespan events instead of deprecated on_event
- Install fastapi-limiter dependency and update poetry.lock

Security improvements:
- Progressive rate limiting: 3+ failures triggers blocking
- Escalating penalties: 5+ failures = 2x penalty, 10+ failures = 4x penalty
- IP-based tracking with automatic cleanup after penalty period
- Dual layer protection: FastAPI Limiter + intelligent failed attempt tracking
- Clear error messages with Retry-After headers for blocked requests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "requests (>=2.32.4,<3.0.0)",
     "redis (>=6.4.0,<7.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)"
+    "email-validator (>=2.2.0,<3.0.0)",
+    "fastapi-limiter (>=0.1.5,<0.2.0)"
 ]
 
 [tool.poetry]
