--- a/.env.example
+++ b/.env.example
@@ -174,6 +174,13 @@ SMS_AUTH_TOKEN=your-twilio-auth-token
 SMS_FROM_NUMBER=+1234567890
 
 # =============================================================================
+# Token Binding Security
+# =============================================================================
+TOKEN_BINDING_ENABLED=false
+TOKEN_BINDING_SKIP_TESTING_TOOLS=true
+TOKEN_BINDING_STRICT_IP=false
+
+# =============================================================================
 # Notes
 # =============================================================================
 # 1. Change all secret keys and passwords in production
